<resources>
    <string name="app_name" translatable="false">Layout</string>

    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>

    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>

    <string name="welcome">Welcome</string>
    <string name="startnow">Start now</string>

    <string name="forgotpass">Forgot password?</string>

    <string name="noaccount">Do not have an account? Sign up</string>

    <string name="location">Location</string>
    <string name="university">University</string>

    <string name="more">MORE</string>
    <string name="account">Account</string>

    <string name="fullname">Full name</string>

    <string name="username">Username</string>

    <string name="createaccount">Create account</string>

</resources>