<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/first_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mainpage_marginLeft"
            android:layout_marginTop="40dp"
            android:text="@string/welcome"
            style="@style/Title_header"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/second_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mainpage_marginLeft"
            android:text="@string/startnow"
            android:textSize="@dimen/mainpage_subtext_size"
            app:layout_constraintTop_toBottomOf="@id/first_text" />


        <Button
            android:id="@+id/signin_button"
            android:layout_width="@dimen/mainpage_buttons_width"
            android:layout_height="@dimen/mainpage_buttons_height"

            android:text="@string/signin"
            android:background="@drawable/selector_buttons"
            app:layout_constraintBottom_toTopOf="@id/signup_button"
            android:layout_marginBottom="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="@dimen/mainpage_buttons_width"
            android:layout_height="@dimen/mainpage_buttons_height"
            android:layout_marginBottom="60dp"

            android:background="@drawable/selector_buttons"
            android:text="@string/signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        </Button>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>