<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/register_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:background="@drawable/img"
            app:layout_constraintBottom_toTopOf="@id/signin_form1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/register_image2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#7FBDB6BC"

            app:layout_constraintTop_toBottomOf="@id/register_image"
            app:layout_constraintBottom_toBottomOf="parent" />

        <EditText
            android:id="@+id/signin_form1"
            android:layout_width="@dimen/loginpage_fields_height"
            android:layout_height="@dimen/loginpage_fields_width"
            android:layout_marginTop="50dp"
            android:background="@drawable/text_field"
            android:paddingLeft="@dimen/loginpage_fields_paddingleft"

            android:hint="@string/email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_image" />

        <EditText
            android:id="@+id/signin_form2"
            android:layout_width="@dimen/loginpage_fields_height"
            android:layout_height="@dimen/loginpage_fields_width"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_field"
            android:paddingLeft="@dimen/loginpage_fields_paddingleft"

            android:hint="@string/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signin_form1" />

        <Button
            android:id="@+id/login_signin_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"

            android:background="@drawable/selector_buttons"
            android:text="@string/signin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signin_form2" />

        <TextView
            android:id="@+id/forgotpass_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/forgotpass"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_signin_button"
            />

        <ImageView
            android:id="@+id/fb_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/fb_icon"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/forgotpass_btn" />

        <TextView
            android:id="@+id/signin_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="22dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/signin"
            app:layout_constraintStart_toEndOf="@id/fb_icon"
            app:layout_constraintTop_toBottomOf="@id/forgotpass_btn"

            />


        <ImageView
            android:id="@+id/gmail_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="85dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/gmail_icon"
            app:layout_constraintStart_toEndOf="@id/signin_text1"
            app:layout_constraintTop_toBottomOf="@id/forgotpass_btn" />

        <TextView
            android:id="@+id/signin_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="22dp"
            android:clickable="true"
            android:focusable="true"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/signin"

            app:layout_constraintStart_toEndOf="@id/gmail_icon"
            app:layout_constraintTop_toBottomOf="@id/forgotpass_btn" />


        <TextView
            android:id="@+id/account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/noaccount"
            android:textIsSelectable="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fb_icon" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>